bin/testsuite/tests/compiler/src/errors/compiler5078.swg
#global testerror "Err0748"
const A = 0

func toto()->A {}
